# python-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: setup.py
src/: smoke.py
tests/: test_setup.py  test_smoke.py
