[project]
name = "python-template"
version = "0.1.0"
description = "Standard template for Langland Conservation data engineering projects"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",  # You mentioned using .env
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- TOOL CONFIGURATION ---

# 1. Ruff (Linter & Formatter) configuration
[tool.ruff]
# A bit wider than standard 88 for Data Engineering (pandas/SQL queries tend to run long)
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Enable specific rules:
# E/F: Standard Pyflakes/pycodestyle errors
# I: Isort (Import sorting)
# B: Flake8-bugbear (catches common bugs/traps)
# D: Pydocstyle (Docstring enforcement)
select = ["E", "F", "I", "B", "D"]

# Ignore D100/D104 (Missing docstring in public module/package) - keeps noise down
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
# Enforce Google style as requested
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# 2. Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"  # Default to running coverage on src
testpaths = [
    "tests",
]
python_files = "test_*.py"
pythonpath = ["src"]  # Ensures src is in path for imports

[tool.hatch.build.targets.wheel]
packages = ["src"]